          margin-top:1em; 
          margin-bottom:0.5em; 
          text-align:center }
      div.subtitle { 
          color:#C0F0C0; 
          font-size:0.8em; 
          margin-bottom:1em; 
          text-align:center }
      div.freetext { color:#F0F0F0 }
      div.list     { color:#C0C0F0 }
      body         { background-color:black; }
    </style>
  </head>
  <body>
$ 9.2
  % Version 9.2
  _ 2012-03-18
    * Fix: close app when pressing back twice
$ 9.1
  % Version 9.1
  _ 2012-03-16
    * Fixed export to other app
    * Force close fixes
$ 9.0
  % Version 9.0
  _ 2012-03-08
    * New internal file format, switching notebooks is much faster now
    * New file chooser dialog
    * New icon!
    * Keep screen on in the main window
    * Straight lines tool
$ 8.6
  % Version 8.6
  _ 2012-02-08
    * Really re-enable pressure sensitive pen on some tablets
$ 8.5
  % Version 8.5
  _ 2012-02-07
    * Fix hide the system bar if USB debugging is disabled
    * Re-enable pressure sensitive pen on some tablets
$ 8.4
  % Version 8.4
  _ 2012-02-06
  ! We are featured on the market, thank you all!
    * Hide the system bar (optional, requires root)
    * Left-handedness fix
    * Hide "fountain pen" if tablet does not have digitizer
    * More bugfixes
$ 8.3
  % Version 8.3
  _ 2012-01-21
    * xhdpi (Galaxy Nexus) layout fixes
    * Palm shield default to false (capacitive pen only)
    * Fix occasional image export bug
    * Alphabetically sort notebooks
    * Page duplication (thanks to Stefan Langerman)
    * Display page number
$ 8.2
  % Version 8.2
  _ 2012-01-04
  ! We collected $782 for the Red Cross during the Xmas sale!
    * More paper backgrounds (thanks to Jens Ratsey)
    * Do not draw background lines when exporting to Evernote
    * Make snap back after erase configurable
    * Make export dialog settings persistent
    * Back button in the thumbnail view now exits
    * Enhancements for capacitive pens
$ 8.1
  % Version 8.1
  _ 2011-12-20